commit to use Heppi for ECAL

--- a/BoundaryOptimisation.ipynb
+++ b/BoundaryOptimisation.ipynb
@@ -69,6 +69,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-keyword arg after keyword arg (<ipython-input-7-bf68634cb3a8>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-bf68634cb3a8>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    l1 = fig2.add_subplot(111).plot(x1,y1, label=\"Text $formula$\", \"r-\", lw=2)\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-keyword arg after keyword arg\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import arange\n",
+    "import matplotlib\n",
+    "# import matplotlib as mpl\n",
+    "import matplotlib.pyplot\n",
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "x1 = [1,2,3]\n",
+    "y1 = [4,5,6]\n",
+    "x2 = [1,2,3]\n",
+    "y2 = [5,5,5]\n",
+    "\n",
+    "# initialization\n",
+    "fig2 = matplotlib.pyplot.figure(figsize=(8.0, 5.0)) # The size of the figure is specified as (width, height) in inches\n",
+    "\n",
+    "# lines:\n",
+    "l1 = fig2.add_subplot(111).plot(x1,y1, label=\"Text $formula$\", \"r-\", lw=2)\n",
+    "l2 = fig2.add_subplot(111).plot(x2,y2, label=\"$legend2$\" ,\"g--\", lw=3)\n",
+    "fig2.add_subplot(111).legend((l1,l2), loc=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2016-06-25 01:10:34--  https://raw.githubusercontent.com/cgumpert/roofit/master/rootprint.py\n",
+      "Resolving raw.githubusercontent.com... 151.101.36.133\n",
+      "Connecting to raw.githubusercontent.com|151.101.36.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1281 (1.3K) [text/plain]\n",
+      "Saving to: 'rootprint.py'\n",
+      "\n",
+      "rootprint.py        100%[===================>]   1.25K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2016-06-25 01:10:35 (16.7 MB/s) - 'rootprint.py' saved [1281/1281]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://raw.githubusercontent.com/cgumpert/roofit/master/rootprint.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
